# simple-raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  obj.mtl
src/: BVH.cpp  BVH.hpp  Geometry.cpp  Geometry.hpp  Model.cpp  Model.hpp  Postprocessing.cpp  Postprocessing.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  main.cpp
